# faspapi_hh

./: .env_dev  .gitignore  alembic.ini  docker-compose.yml  pyproject.toml
bot-service/: Dockerfile  base_settings.py  bot.py  pyproject.toml
bot-service/grpc_service/: MessageService.py  grpc_server.py  message_pb2.py  message_pb2_grpc.py
bot-service/grpc_utils/: MessageService.py  grpc_server.py  message_pb2_grpc.py
bot-service/rabbit_utils/: Rabbit.py  RabbitMQFactory.py  schemas.py
bot_service/: bot.py
fastapi/: base_settings.py  main.py
fastapi-service/: Dockerfile  base_settings.py  main.py
fastapi-service/grpc_utils/: utils.py
fastapi-service/migrations/: env.py
fastapi-service/repository/: repository.py  utils.py
fastapi-service/src/: Dockerfile  base_settings.py  database.py  main.py  pyproject.toml
fastapi-service/subscriber/: models.py  router.py  schemas.py  utils.py
fastapi-service/user/: models.py  router.py  schemas.py
fastapi-service/vacancy/: router.py  utils.py
fastapi-service/workers/: Observer.py  ParserHH.py  Reporter.py
fastapi/posts/: schemas.py  utils.py
fastapi/repository/: repository.py
fastapi/subscriber/: utils.py
fastapi/user/: schemas.py
fastapi/workers/: Reporter.py
grpc-service/recommendations/: main.py  recommendations.py
migrations/: env.py
parser_service/: Dockerfile  base_settings.py  database.py  main.py  pyproject.toml
parser_service/grpc_utils/: grpc_connection.py  (+1 more)
src/: base_settings.py  config.py  database.py  main.py
tests/: context.py  example.py  neuro.ipynb  similarity.py  test.py
(+68 files in other folders)
